--- a/Freelance.WebApi/Views/AuthUser/OAuthHandler.cshtml
+++ b/Freelance.WebApi/Views/AuthUser/OAuthHandler.cshtml
@@ -1,10 +1,9 @@
 ﻿@{
     var accessToken = ViewData["access_token"];
-    var provider = ViewData["provider"];
     ViewData["Title"] = "Redirect";
 }
 <script>
     localStorage.clear();
-    localStorage.setItem('oauth_token', '{ "provider": @provider, "access_token": "@accessToken" }');
+    localStorage.setItem('oauth_token', '@accessToken');
     window.location.href = 'https://localhost:3000/register';
 </script>
