--- a/Freelance.WebApi/Views/AuthUser/OAuthHandler.cshtml
+++ b/Freelance.WebApi/Views/AuthUser/OAuthHandler.cshtml
@@ -1,9 +1,23 @@
 ﻿@{
-    var accessToken = ViewData["access_token"];
     ViewData["Title"] = "Redirect";
+    var token = ViewData["token"];
 }
-<script>
-    localStorage.clear();
-    localStorage.setItem('oauth_token', '@accessToken');
-    window.location.href = 'https://localhost:3000/register';
+<script> 
+    function parseJwt(token) {
+        var base64Url = token.split('.')[1];
+        var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+        var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
+            return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+
+        return JSON.parse(jsonPayload);
+    }
+
+    var accessToken = "@token";
+    if (parseJwt(accessToken)['http://schemas.microsoft.com/ws/2008/06/identity/claims/role'] === 'OAuth') {
+        window.location.href = 'https://localhost:3000/register/complete';
+    }
+    else {
+        window.location.href = 'https://localhost:3000/';
+    }
 </script>
